--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ cache: yarn
 
 addons:
   chrome: stable
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
