--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "devDependencies": {
     "body-parser": "^1.18.2",
+    "chrome-launcher": "^0.8.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.8.0",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
-    "open": "^0.0.5",
     "style-loader": "^0.19.0",
     "tape": "^4.8.0",
     "text-loader": "^0.0.1",
