--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Chris Jaynes <chris@jaynes.me>",
   "license": "MIT",
   "scripts": {
+    "bump": "conventional-recommended-bump",
     "demo": "webpack-dev-server --config=./demo/webpack.config.js",
     "dev": "./run-tests.js false",
     "docs": "webpack --config=./demo/webpack.config.js",
@@ -16,7 +17,9 @@
   "devDependencies": {
     "body-parser": "^1.18.2",
     "chrome-launcher": "^0.8.1",
+    "conventional-recommended-bump": "^1.0.2",
     "css-loader": "^0.28.7",
+    "cz-conventional-changelog": "^2.0.0",
     "eslint": "^4.8.0",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.2",
@@ -27,5 +30,10 @@
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-hot-middleware": "^2.19.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
